fix(CSS LOADER)fix loader z-index when disappear 23/08/2021 @1:22

--- a/sass/layout/_loader.scss
+++ b/sass/layout/_loader.scss
@@ -1,10 +1,12 @@
 @keyframes spin1 {
   100% {
+
     transform: rotate(900deg);
   }
 }
 @keyframes spin2 {
   100% {
+
     transform: rotate(1260deg);
   }
 }
@@ -15,6 +17,12 @@
   }
   100% {
     opacity: 0;
+  }
+}
+
+@keyframes goOut {
+  100% {
+    z-index: -100;
   }
 }
 
@@ -29,8 +37,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  animation: loaded 3.5s cubic-bezier(0.25, 0.44, 0.42, 1) forwards;
-
+  animation: loaded 3.5s cubic-bezier(0.25, 0.44, 0.42, 1) forwards, goOut 1s 3500ms linear forwards;
   &__container {
     width: 60%;
     display: flex;
